--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 EMAIL_HOST_USER = satrey.mail@gmail.com
-EMAIL_HOST_PASSWORD = 
+EMAIL_HOST_PASSWORD = hsqy zaij boyp jzjf
 DEFAULT_FROM_EMAIL = My Blog <satrey.mail@gmail.com>
